--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
           <a href="#services" class="nav-link text-sm text-muted-foreground hover:text-foreground transition-colors">Services</a>
           <a href="#expertise" class="nav-link text-sm text-muted-foreground hover:text-foreground transition-colors">Expertise</a>
           <a href="#about" class="nav-link text-sm text-muted-foreground hover:text-foreground transition-colors">À propos</a>
-          <a href="#contact" class="bg-primary text-primary-foreground px-4 py-2 rounded-lg text-sm font-medium hover:bg-primary/90 transition-colors">Contact</a>
+          <a href="#contact" class="nav-link text-sm text-muted-foreground hover:text-foreground transition-colors">Contact</a>
+          <a href="demande-devis.html" class="bg-primary text-primary-foreground px-4 py-2 rounded-lg text-sm font-medium hover:bg-primary/90 transition-colors">Devis gratuit</a>
         </div>
 
         <!-- Mobile menu button -->
@@ -122,7 +123,8 @@
           <a href="#services" class="text-sm text-muted-foreground hover:text-foreground transition-colors">Services</a>
           <a href="#expertise" class="text-sm text-muted-foreground hover:text-foreground transition-colors">Expertise</a>
           <a href="#about" class="text-sm text-muted-foreground hover:text-foreground transition-colors">À propos</a>
-          <a href="#contact" class="bg-primary text-primary-foreground px-4 py-2 rounded-lg text-sm font-medium text-center hover:bg-primary/90 transition-colors">Contact</a>
+          <a href="#contact" class="text-sm text-muted-foreground hover:text-foreground transition-colors">Contact</a>
+          <a href="demande-devis.html" class="bg-primary text-primary-foreground px-4 py-2 rounded-lg text-sm font-medium text-center hover:bg-primary/90 transition-colors">Devis gratuit</a>
         </div>
       </div>
     </nav>
@@ -145,7 +147,7 @@
             De l'infrastructure réseau au développement d'applications sur mesure.
           </p>
           <div class="flex flex-col sm:flex-row gap-4">
-            <a href="#contact" class="inline-flex items-center justify-center gap-2 bg-primary text-primary-foreground px-6 py-3 rounded-lg font-medium hover:bg-primary/90 transition-colors">
+            <a href="demande-devis.html" class="inline-flex items-center justify-center gap-2 bg-primary text-primary-foreground px-6 py-3 rounded-lg font-medium hover:bg-primary/90 transition-colors">
               Demander un devis
               <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
